Refactor to not spawn a new process for every command.
-Reuse the su and sh processes we create. Much better performance.